# bpw-pde

./: .readthedocs.yaml  LICENSE.txt  README.rst  requirements.txt  setup.cfg
docs/: bpw_pde.rst  conf.py  index.rst  modules.rst  requirements.txt
src/bpw_pde/: __init__.py  __main__.py  common.py  dataframe.py  index.py  series.py
tests/: test_bpw_pde.py  test_common.py  test_dataframe.py  test_series.py
