[metadata]
name = bpw_pde
version = attr:bpw_pde.__version__
description = Eponymous extensions to the Python pandas package.
description-file = README.md
long_description = file:README.md
long_description_content_type = text/markdown
author = Bryan Patrick Wood
author_email = bpw1621@gmail.com
url = 'https://github.com/bpw1621/bpw-pde'
download_url = https://github.com/bpw1621/bpw-pde/archive/master.zip
project_urls =
    Homepage = https://bpw1621.github.io/bpw-pde
    Source Code = https://github.com/bpw1621/bpw-pde
    Documentation = https://bpw-pde.readthedocs.io/en/latest/
    Bug Tracker = https://github.com/bpw1621/bpw-pde/issues
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only

;keywords = ... TODO
;license = ... TODO

[options]
zip_safe = False
include_package_data = True
package_dir = =src
packages = find:
install_requires =
    wheel
setup_requires =
    setuptools

[options.packages.find]
where = src

[bdist_wheel]
universal = true

[options.extras_require]
api =
    fastapi
base =
    debtcollector
    humanize
    importlib_resources; python_version < "3.7"
    joblib
    more-itertools
    pluggy
    python-dotenv
    regex
    requests
    tqdm
cli =
    typer
dev =
    flake8
    pretty_errors
    tox
    twine
doc =
    sphinx
    sphinx_rtd_theme
    towncrier
gui =
    streamlit
nlp =
    gensim
    nltk
    pyldavis
    scattertext
    spacy
    stanza
    textacy
    wordcloud
test =
    pytest
    pytest-cov
    pytest-mock
all =
    debtcollector
    humanize
    importlib_resources; python_version < "3.7"
    joblib
    more-itertools
    pluggy
    python-dotenv
    regex
    requests
    tqdm
    fastapi
    typer
    flake8
    pretty_errors
    tox
    twine
    sphinx
    sphinx_rtd_theme
    towncrier
    streamlit
    gensim
    nltk
    pyldavis
    scattertext
    spacy
    stanza
    textacy
    wordcloud
    pytest
    pytest-cov
    pytest-mock

[options.entry_points]
console_scripts =
    bpw-pde = bpw_pde.bpw_pde:main

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']