[metadata]
name = bpw_pde
version = attr:bpw_pde.__version__
description = Eponymous extensions to the Python pandas package.
description-file = README.md
long_description = file:README.md
long_description_content_type = text/markdown
author = Bryan Patrick Wood
author_email = bpw1621@gmail.com
url = https://github.com/bpw1621/bpw-pde
download_url = https://github.com/bpw1621/bpw-pde/archive/master.zip
project_urls =
    Source = https://github.com/bpw1621/bpw-pde
    Bug Tracker = https://github.com/bpw1621/bpw-pde/issues
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
keywords = 'pandas'
license = 'MIT'

[options]
zip_safe = False
include_package_data = True
package_dir = =src
packages = find:
install_requires =
    missingno
    pandas
    sidetable
    tqdm
    wheel
setup_requires =
    setuptools

[options.packages.find]
where = src

[bdist_wheel]
universal = true

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']
